feat(daemon): add service with ClamAV sidecars [WIP]

--- a/.gitignore
+++ b/.gitignore
@@ -152,6 +152,12 @@ dist
 !.yarn/versions
 
 ########################################
+# Visual Studio Code
+
+.vscode/*
+!.vscode/extensions.json
+
+########################################
 # Custom
 
 /.debug/*
